*** If you want to know full changes, please read 000_gitlog.txt and history.txt. ***

* SNAPSHOT Dec 04, 2017
  * Upstream 2017-12-03.
  * [VM/MC6809] Fixing hangup with F-BASIC v3.0ε.Thanks to Ryu Takegami-San. 
                (see https://matsuri.5ch.net/test/read.cgi/i4004/1483504365/641-645)
  * [VM/FM7] DISPLAY: Implement software scan line(s).
  * [VM/FM77AV] VRAM: More use SIMD to be faster.
    [VM/FM7] Try: Add suuporting for OPpenMP.But be slower than not using OpenMP (/_;)
  * Build with commit 9eb246b375699752a898d8be79a227f58e473d8e (or later).

-- Dec 04, 2017 19:29:05 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT Oct 18, 2017
  * Upstream 2017-08-12.
  * [VM/FM7] FLOPPY: Fix crash when starting.
  * [Build/CMAKE] Fix FTBFS with USE_COMMON_DEVICE_LIB != "Yes".
  * [Build/WIN32] MinGW: Add new cross-build script for FFMPEG-3.4 and x264-152.
  * [Build/Linux] Add "COMPRESS_SYMBOLS" flag to configuration.
  * [BUILD/Linux] Don't use LTO for shared libs, use compress symbols.
  * [BUILD] Fix FTBFSs a lot.
  * [DOC] Rename LICENSE to LICENSE.txt due to coflict to doc/license directory.This is important to release for M$ Windoze OS.

-- Oct 18, 2017 16:33:58 +0900 K.Ohta <whatisthis.sowhat@gmail.com>

* SNAPSHOT Aug 11, 2017
  * Upstream 2017-08-10.
  * [EMU/ROMAKANA] Fix not convert with Qt.Use functions within EMU:: , not use original ROMAKANA functions.
  * [VM] Add PC-9801RA and PC-9801VX.
  * [VM] Add devices to libCSPcommon_vm mostly.
  * [VM] Fix FTBFS and bugs a lot.
  * [VM/FM7] Stop using DUMMYDEVICE:: . Use VM::get_extra_leds() to get led status.
  * [VM/MB8877] DISK:Fix not apply workaround to Gambler Jiko Chusin-ha for FM-7 series.
  * [VM/DATAREC] Fix crash with MZT data.
  * [Qt/UI] OpenGL: Display ICONs when accessing to virtual medias.
  * [Qt/UI]  Separate status bar display:Accessing to virtual medias.
  * [Qt/UI] Menu: Make macro to be easier constructing.