@@ -1,3 +1,3 @@
 <B><FONT SIZE=-1>Upstream 2017-12-03<BR>
-Qt Port and FM7 series 2017-12-04<BR>
+Qt Port and FM7 series 2017-12-10 (FM-8/7 with Z80 test.Some VMs Only.)<BR>
 </FONT></B>
