@@ -9,15 +9,15 @@
 <h1>Common Source Code Project</h1>
 <DIV ALIGN=RIGHT><FONT SIZE=2>
 Upstream Version: 2017-12-03<BR>
-Qt Port and FM7 series 2017-12-04<BR>
+Qt Port and FM7 series 2017-12-10 (FM-8/7 with Z80 test.Some VMs Only.)<BR>
 libCSPavio 2.6.11<BR>
 libCSPgui 2.10.5<BR>
 libCSPosd 2.9.12<BR>
 libCSPemu_utils 2.6.2<BR>
-libCSPcommon_vm 1.1.21<BR>
+libCSPcommon_vm 1.1.22<BR>
 libCSPfmgen 1.1.1<BR>
 FFMPEG 3.4 + liblame 3.99 + libx264-152<BR>
-Build Version: 9eb246b375699752a898d8be79a227f58e473d8e<BR>
+Build Version: c15048ee4635d4413887c2b8374a488a566e63cb<BR>
 </FONT></DIV>
 <BR>
 <DIV ALIGN=RIGHT><FONT SIZE=3>
@@ -70,5 +70,5 @@ See also:<BR>
 </FONT>
 <hr>
 <address></address>
-<!-- hhmts start -->Last modified: Mon 04, Dec 2017 19:29:05<!-- hhmts end -->
+<!-- hhmts start -->Last modified: Sun 10, Dec 2017 19:48:05<!-- hhmts end -->
 </body> </html>
